# Inklude

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  QUICKSTART_VERCEL.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  vercel.json
alembic/: env.py
app/: config.py  database.py  main.py
app/api/: admin.py  analysis.py  analytics.py  auth.py  custom_pronouns.py  health.py  identity.py  neo_pronouns.py  router.py  templates.py
app/middleware/: auth.py
app/nlp/: coreference.py  engine.py  gendered_language.py  lexicon.py  neo_pronouns.py  pronoun_detector.py  suggestion.py
app/schemas/: admin.py  analysis.py  custom_pronouns.py  identity.py  templates.py
app/services/: analysis_service.py  analytics_service.py  auth_service.py  identity_service.py
app/static/: index.html
convex/: admin.ts  analysis.ts  analytics.ts  auth.config.ts  auth.ts  customPronouns.ts  http.ts  identities.ts  neoPronouns.ts  schema.ts  seed.ts  templates.ts  tsconfig.json
convex/_generated/: api.d.ts  dataModel.d.ts
frontend/: .env.example  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/animations/: variants.ts
frontend/src/components/: Layout.tsx  NeoPronounPicker.tsx  PronounBadge.tsx  (+2 more)
scripts/: seed_lexicon.py
tests/: conftest.py
tests/test_api/: test_analysis.py  test_health.py  test_identity.py
tests/test_nlp/: test_coreference.py  test_gendered_language.py  test_pronoun_detector.py  test_suggestion.py
(+20 files in other folders)
